# financialcasegeneratorsystem

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  PDF格式检查测试方案.md  PDF生成模块重构-快速总结.md  PDF生成模块重构规划-新架构.md  README.md  analyze_evidence.py  config.py  generate_pdf.py  install_and_test.sh  main.py  pyproject.toml  requirements.txt  run_complete.py  run_full_regeneration.py  run_llm.py  run_new_architecture.py  run_tests.py  run_v2.py  run_with_new_arch.py  start.sh  stop.sh  test_complete.py  test_config.py  test_full.py  test_markdown_clean.py  test_mock.py  test_new_architecture.py  test_pdf_diagnosis.py  test_pdf_generator.py  test_pdf_quality.py  test_quick.py  test_quick_fixed.py  test_report.md  test_reporter.py  test_simple.py  test_step_by_step.py  test_structure.py  (+20 more)
docs/: API问题排查记录.md  BUG_REPORT_反思文档.md  CHANGELOG.md  CICD经验记录.md  COLLAB_EXPERIENCE_2026-02-02.md  GITEE_CICD_SETUP.md  MEMO-2026-02-001_Financial_Case_Generator_Analysis.md  MEMO-2026-02-002_Test_Coverage_Analysis.md  PRODUCT_REQUIREMENTS.md  PRODUCT_REQUIREMENTS_backup.md  README.md  REVIEW_RFC-2026-02-03-001.md  REVIEW_RFC-2026-02-03-001_Prompt设计修复方案.md  RFC-2026-02-001_深度调研报告.md  RFC-2026-02-03-001_Prompt设计修复方案.md  SESSION_SUMMARY_2026-02-02.md  TD评审意见_TD-2026-02-01-v3.0_Agent1.md  TEST_PLAN.md  example_raw_prompt.txt  v2.0功能保留清单.md  v2.0完整测试清单.md  开发规范.md  文档体系问题清单_2026-01-28.md  测试报告_TD-2026-02-01-002_Prompt构建策略.md  测试报告_TR-2026-01-28-FULL.md  测试报告_TR-2026-01-29-BLACKBOX.md  测试报告_TR-2026-01-29-FULL.md  测试报告_TR-2026-02-01-002_v2_E2E增强.md  测试用例_TC-2026-02-01-v3.0.md  自动验证系统更新日志.md  (+27 more)
(+150 files in other folders)
